[package]
name = "bevy-default-font-bug"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.0-rc.3", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "multi_threaded",
] }
